src/snapshots/oas2pdf__sample_tests__several_methods.snap
---
source: src/sample_tests.rs
expression: "run_sample_test(\"samples/several-methods.yaml\")"
---
#let title = [ Several Methods API ]

#set heading(numbering: "1.")
#set page(
  header: align(
    right + horizon,
    title
  ),
  numbering: "1/1"
)

#align(horizon)[
	#align(center, text(27pt)[
	  *#title*
	])
	#align(center, text(24pt)[ A simple API with different verbs ])
]

#pagebreak()

#outline(
	depth: 2,
	indent: auto,
)


#pagebreak()
= Container

== /get-post

=== get - GetThings
Get things



==== Parameters
#table(
	columns: 4,
	[Name], [Required], [Description], [Schema],

	[all],
	[false],
	[Show all containers. Only running containers are shown by default (i.e., this defaults to false)],
	[],

)

=== post - PostThings
Post things

Post things

==== Parameters
#table(
	columns: 4,
	[Name], [Required], [Description], [Schema],

	[thing],
	[false],
	[ID of thing to post],
	[],

)


== /patch-delete

=== delete - DeleteThings
Delete things

Delete things

==== Parameters
#table(
	columns: 4,
	[Name], [Required], [Description], [Schema],

	[thing],
	[false],
	[ID of thing to post],
	[],

)

=== patch - PatchThings
Patch things

Patch things

==== Parameters
#table(
	columns: 4,
	[Name], [Required], [Description], [Schema],

	[all],
	[false],
	[Show all containers. Only running containers are shown by default (i.e., this defaults to false)],
	[],

)
